==> ARMmbed/mbed-os/targets/TARGET_Geehy/TARGET_APM32F4XX/can_api.c <==
#include "can_api.h"
#include "pinmap.h"
#include "PeripheralPins.h"
#include "mbed_error.h"
#include "apm32f4xx_can.h"
#define CAN_BIT_SEG_MAX          24
#define CAN_BIT_SEG_MIN          4
#define CAN_TIM_SEG1_MASK        0x000F0000
#define CAN_TIM_SEG2_MASK        0x00700000
#define CAN_BAUD_PSC_MASK        0x000003FF
#define CAN_SJW_MASK             0x03000000

void can_init_freq(can_t *obj, PinName rd, PinName td, int hz)
{
    CAN_Config_T canConfig;
    CAN_ConfigStructInit(&canConfig);

    CANName can_rx = (CANName)pinmap_peripheral(rd, PinMap_CAN_RD);
    CANName can_tx = (CANName)pinmap_peripheral(td, PinMap_CAN_TD);
    obj->can = (CANName)pinmap_merge(can_rx, can_tx);

    CAN_T *can = (CAN_T *)(obj->can);

    MBED_ASSERT((int)obj->can != NC);

    if (obj->can == CAN_1)
    {
        RCM_EnableAPB1PeriphClock(RCM_APB1_PERIPH_CAN1);
        CAN_Reset(can);
        obj->index = 0;
    }
    else if (obj->can == CAN_2)
    {
        RCM_EnableAPB1PeriphClock(RCM_APB1_PERIPH_CAN1);
        RCM_EnableAPB1PeriphClock(RCM_APB1_PERIPH_CAN2);
        CAN_Reset(can);
        obj->index = 1;
    }
    else
    {
        return;
    }

    /* Configure the CAN pins */
    pinmap_pinout(rd, PinMap_CAN_RD);
    pinmap_pinout(td, PinMap_CAN_TD);

    if (rd != NC)
    {
        pin_mode(rd, PullUp);
    }
    if (td != NC)
    {
        pin_mode(td, PullUp);
    }

    CAN_Config(can,&canConfig);
    
    can_mode_config(can, CAN_MODE_NORMAL);

    can_frequency(obj, hz);

    if (obj->can == CAN_1)
    {
        can_filter(obj, 0, 0, CANStandard, 0);
    }
    else
    {
        can_filter(obj, 0, 0, CANStandard, 14);
    }
}

void can_free(can_t *obj)
{
    CAN_T *can = (CAN_T *)(obj->can);
    CAN_Reset(can);

    if(obj->can == CAN_1)
    {
        RCM_DisableAPB1PeriphClock(RCM_APB1_PERIPH_CAN1);
    }
    if(obj->can == CAN_2)
    {
        RCM_DisableAPB1PeriphClock(RCM_APB1_PERIPH_CAN2);
    }
}

int can_frequency(can_t *obj, int hz)
{
    int ret = 0;
    CAN_T *can = (CAN_T *)(obj->can);
    /* The maximum baud rate support to 1M */
    if (hz <= 1000000)
    {

        if (CAN_OperatingMode(can, CAN_OPERATING_MODE_INIT) == SUCCESS)
        {
            can_baudrate_set(can,hz);
        }
        else
        {
            error("the configuration of can frequency is out of range \r\n");
        }

        if (CAN_OperatingMode(can, CAN_OPERATING_MODE_NORMAL) == SUCCESS)
        {
            ret = 1;
        }
        else
        {
            ret = 0;
        }
    }

    return ret;
}

void can_irq_init(can_t *obj, can_irq_handler handler, uintptr_t context)
{
    irq_callback = handler;
    irq_contexts[obj->index] = context;
}

void can_irq_free(can_t *obj)
{
    CAN_T *can = (CAN_T *)(obj->can);
    if(obj->can == CAN_1)
    {
        CAN_DisableInterrupt(can,CAN_INT_TXME | CAN_INT_F0MP | CAN_INT_F1MP | \
                             CAN_INT_ERRP | CAN_INT_BOF | CAN_INT_ERR);
    }

    if(obj->can == CAN_2)
    {
        CAN_DisableInterrupt(can,CAN_INT_TXME | CAN_INT_F0MP | CAN_INT_F1MP | \
                             CAN_INT_ERRP | CAN_INT_BOF | CAN_INT_ERR);
    }

    irq_contexts[obj->index] = 0;
}

void can_irq_set(can_t *obj, CanIrqType irq, uint32_t enable)
{
    uint32_t vector = 0;
    IRQn_Type irq_num = 0;
    CAN_T *can = (CAN_T *)(obj->can);

    if (obj->can == CAN_1) 
    {
        vector = (uint32_t)can1_irq_entry;
    }
    else if (obj->can == CAN_2)
    {
        vector = (uint32_t)can2_irq_entry;
    }

    switch (irq)
    {
        case IRQ_RX:
            can_interrupt_config(can, CAN_INT_F0MP, enable);
            if(obj->can == CAN_1)
            {
                irq_num = CAN1_RX0_IRQn;
            }
            else
            {
                irq_num = CAN2_RX0_IRQn;
            }
            break;
        case IRQ_TX:
            can_interrupt_config(can, CAN_INT_TXME, enable);
            if(obj->can == CAN_1)
            {
                irq_num = CAN1_TX_IRQn;
            }
            else
            {
                irq_num = CAN2_TX_IRQn;
            }
            break;
        case IRQ_ERROR:
            can_interrupt_config(can, CAN_INT_ERR, enable);
            if(obj->can == CAN_1)
            {
                irq_num = CAN1_SCE_IRQn;
            }
            else
            {
                irq_num = CAN2_SCE_IRQn;
            }
            break;
        case IRQ_PASSIVE:
            can_interrupt_config(can, CAN_INT_ERRP, enable);
            if(obj->can == CAN_1)
            {
                irq_num = CAN1_SCE_IRQn;
            }
            else
            {
                irq_num = CAN2_SCE_IRQn;
            }
            break;
        case IRQ_BUS:
            can_interrupt_config(can, CAN_INT_BOF, enable);
            if(obj->can == CAN_1)
            {
                irq_num = CAN1_SCE_IRQn;
            }
            else
            {
                irq_num = CAN2_SCE_IRQn;
            }
            break;
        default:
            return;
    }

    NVIC_SetVector(irq_num, vector);
    NVIC_EnableIRQ(irq_num);
}

int can_write(can_t *obj, CAN_Message message, int cc)
{
    CAN_TxMessage_T TxMessage;
    uint32_t i;
    CAN_T *can = (CAN_T *)(obj->can);

    /* configure frame type: data or remote */
    if (message.type == CANData) 
    {
        TxMessage.remoteTxReq = CAN_RTXR_DATA;
    } 
    else if (message.type == CANRemote)
    {
        TxMessage.remoteTxReq = CAN_RTXR_REMOTE;
    } 
    else 
    {
        error("frame type of transmit message is invalid \r\n");
    }

    /* configure frame format: standard or extended */
    if (message.format == CANStandard)
    {
        TxMessage.typeID = CAN_TYPEID_STD;
        TxMessage.stdID = message.id;
    }
    else if (message.format == CANExtended)
    {
        TxMessage.typeID = CAN_TYPEID_EXT;
        TxMessage.extID = message.id;
    }
    else
    {
        error("frame format of transmit message is invalid \r\n");
    }

    TxMessage.dataLengthCode = message.len;

    for (i = 0; i < message.len; i++)
    {
        TxMessage.data[i] = message.data[i];
    }

    CAN_TxMessage(can,&TxMessage);

    return 1;
}

int can_read(can_t *obj, CAN_Message *msg, int handle)
{
    uint8_t i;
    uint8_t fifo_number;

    fifo_number = (uint8_t)handle;
    CAN_RxMessage_T RxMessage;
    CAN_T *can = (CAN_T *)(obj->can);

    /* if the frame is not received, retrun 0 */
    if (can->RXF0_B.FMNUM0 == 0)
    {
        return 0;
    }

    CAN_RxMessage(can, fifo_number, &RxMessage);

    if (RxMessage.typeID == CAN_TYPEID_STD)
    {
        msg->format = CANStandard;
    }
    else
    {
        msg->format = CANExtended;
    }

    if (msg->format == CANStandard)
    {
        msg->id = (uint32_t)0x000007FF & (RxMessage.stdID);
    } 
    else
    {
        msg->id = (uint32_t)0x1FFFFFFF & (RxMessage.extID);
    }

    if (RxMessage.remoteTxReq == CAN_RTXR_REMOTE)
    {
        msg->type = CANRemote;
    }
    else
    {
        msg->type = CANData;
    }

    msg->len = (uint8_t)RxMessage.dataLengthCode;

    for (i = 0; i < msg->len; i++)
    {
        msg->data[i] = (uint8_t)RxMessage.data[i];
    }
    /* If the frame is received successfully, retrun 1 */
    return 1;
}

void can_reset(can_t *obj)
{
    CAN_T *can = (CAN_T *)(obj->can);

    CAN_Reset(can);
}

unsigned char can_rderror(can_t *obj)
{
    CAN_T *can = (CAN_T *)(obj->can);

    return (can->ERRSTS >> 24) & 0xFF;
}

unsigned char can_tderror(can_t *obj)
{
    CAN_T *can = (CAN_T *)(obj->can);

    return (can->ERRSTS >> 16) & 0xFF;
}

void can_monitor(can_t *obj, int silent)
{
    CAN_T *can = (CAN_T *)(obj->can);
    if (silent)
    {
        can_mode_config(can, CAN_MODE_SILENT);
    }
    else
    {
        can_mode_config(can, CAN_MODE_NORMAL);
    }
}

int can_mode(can_t *obj, CanMode mode)
{
    CAN_T *can = (CAN_T *)(obj->can);
    switch (mode)
    {
        case MODE_NORMAL:
            can_mode_config(can, CAN_MODE_NORMAL);
            break;
        case MODE_SILENT:
            can_mode_config(can, CAN_MODE_SILENT);
            break;
        case MODE_TEST_GLOBAL:
        case MODE_TEST_LOCAL:
            can_mode_config(can, CAN_MODE_LOOPBACK);
            break;
        case MODE_TEST_SILENT:
            can_mode_config(can, CAN_MODE_SILENT_LOOPBACK);
            break;
        default:
            return 0; 
    }
    return 0;
}

int can_filter(can_t *obj, uint32_t id, uint32_t mask, CANFormat format, int32_t handle)
{
    CAN_FilterConfig_T filterConfig;
    CAN_T *can = (CAN_T *)(obj->can);

    filterConfig.filterNumber = handle;
    filterConfig.filterMode = CAN_FILTER_MODE_IDMASK;
    filterConfig.filterScale = CAN_FILTER_SCALE_32BIT;
    filterConfig.filterFIFO = CAN_FILTER_FIFO_0;
    filterConfig.filterActivation = ENABLE;

    switch (format)
    {
        case CANStandard:
            /* configure SFID[10:0] */
            filterConfig.filterIdHigh = id << 5;
            filterConfig.filterIdLow =  0x0;
            /* configure SFID[10:0] mask */
            filterConfig.filterMaskIdHigh = mask << 5;
            /* both data and remote frames can be received */
            filterConfig.filterMaskIdLow = 0x0;
            break;

        case CANExtended:
            /* configure EFID[28:13] */
            filterConfig.filterIdHigh = id >> 13;
            /* configure EFID[12:0] and frame format bit set */
            filterConfig.filterIdLow = (id << 3) | (1 << 2);
            /* configure EFID[28:13] mask */
            filterConfig.filterMaskIdHigh = mask >> 13;
            /* configure EFID[12:0] and frame format bit mask */
            /* both data and remote frames can be received */
            filterConfig.filterMaskIdLow = (mask << 3) | (1 << 2);
            break;

        case CANAny:
            error("CANAny mode is not supported \r\n");

        default:
            error("parameter is not supported \r\n");
    }

    CAN_ConfigFilter(&filterConfig);
    CAN_SlaveStartBank(can,handle);

    return handle;
}
